fixed result spacing issue

--- a/demo/css/bm.css
+++ b/demo/css/bm.css
@@ -6,8 +6,12 @@
   margin-top: 10px;
 }
 #result {
-  margin: 10px inherit;
+  margin: 10px 0;
   padding-bottom: 5px;
   border-radius: 5px;
   background-color: #d9edf7;
+}
+.listItem {
+
+  margin: 10px 0;
 }
